syntax = "proto3";

option go_package = "github.com/anhhuy1010/DATN-cms-customer/grpc/proto/users";

package user;

service User {
  rpc Detail(DetailRequest) returns (DetailResponse);
}

message DetailRequest {
  string token = 1;
}

message DetailResponse {
  string user_uuid = 1;
  string user_email = 2;
  string user_name = 3;
}